--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "1.0.0",
   "engines": {
-    "node": "12.18.3"
+    "node": "12.18.3",
+    "npm": "6.14.6"
   },
   "description": "",
   "main": "server.js",
